redirect the In/out streams of the new minecraft instance